fixtures/src/valid/epub3-multi-chapter/OEBPS/nav.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
<head><title>Navigation</title></head>
<body>
  <nav epub:type="toc">
    <h1>Table of Contents</h1>
    <ol>
      <li><a href="chapter1.xhtml">Chapter 1</a></li>
      <li><a href="chapter2.xhtml">Chapter 2</a></li>
      <li><a href="chapter3.xhtml">Chapter 3</a></li>
    </ol>
  </nav>
  <nav epub:type="landmarks">
    <h2>Landmarks</h2>
    <ol>
      <li><a epub:type="bodymatter" href="chapter1.xhtml">Start of Content</a></li>
      <li><a epub:type="toc" href="nav.xhtml">Table of Contents</a></li>
    </ol>
  </nav>
</body>
</html>
